<resources>
    <string name="app_name">My Application</string>

    <string name="fb_app_id">406364016222124</string>
    <string name="gl_server_api_key">AIzaSyBS7zC9tJFmYzF8HmK-aQNMgV06mO09kLI</string>

    <string name="fb_login_txt">Sign in with Facebook</string>
    <string name="username">Email/Mobile no.</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="forgot">Forgot Password?</string>
    <string name="acct_txt">Or sign in with Company\'s account</string>

    <string name="wru">Who are you?</string>
    <string name="secret">Top Secret</string>
    <string name="eugame">Are you game?</string>
    <string name="new_here">New?</string>
</resources>
