<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_normal"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColorHint="@drawable/generic_focus_variation_blackmat_blackdim"
        android:theme="@style/TextInputLayoutStyle"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:maxLines="1"
            android:textColor="@drawable/generic_focus_variation_blackmat_blackdim" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:textColorHint="@drawable/generic_focus_variation_blackmat_blackdim"
        android:theme="@style/TextInputLayoutStyle"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@drawable/generic_focus_variation_blackmat_blackdim" />

    </android.support.design.widget.TextInputLayout>


    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/">-->

    <Button
        android:id="@+id/btnLoginAcct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_2dp_curve_blue_filling"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorAlternateWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/forgot"
        android:visibility="visible"
        android:padding="6dp"
        android:textColor="@color/darkblue"
        android:textSize="14sp" />

</LinearLayout>